--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -2,7 +2,6 @@ spring.config.import= configserver:http://localhost:8090
 spring.application.name= api-gateway
 server.port=8080
 
-
 #applicaion.audience: https://easyelectroshop.auth/
 #applicaion.client-origin-url: http://localhost:4040
 
@@ -10,7 +9,10 @@ spring.cloud.gateway.routes[0].id = PRODUCT-SERVICE
 spring.cloud.gateway.routes[0].uri = lb://PRODUCT-SERVICE
 spring.cloud.gateway.routes[0].predicates[0] = Path=/api/v1/product/**
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-hb635mdqnobuyyhh.us.auth0.com/
-spring.security.oauth2.resourceserver.jwt.audience= https://easyelectroshop.auth/
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-0emfhw578yfcyd2f.eu.auth0.com/
+spring.security.oauth2.resourceserver.jwt.audience= https://nextapp.auth.com/
 
 spring.main.allow-bean-definition-overriding=true
+
+application.client-origin-url: http://localhost:4040
+application.audience: https://nextapp.auth.com/
