--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -100,6 +100,10 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
